# forcad

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/Modules/: SetParallelizationLibrary.cmake  SetUpLAPACK.cmake
src/: CMakeLists.txt  forcad_nurbs_surface.f90  forcad_nurbs_volume.f90  forcad_utils.f90
